src/test/ui/consts/const-eval/mod-static-with-const-fn.stderr
error[E0658]: mutation through a reference is not allowed in statics
  --> $DIR/mod-static-with-const-fn.rs:16:5
   |
LL |     *FOO.0.get() = 5;
   |     ^^^^^^^^^^^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
